# CA_RNN

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: ca_data.pt  copernicus_download_temperature.py  gen_train_set.slurm  prepare.py  test_pt_files.py  xarray_prep.py
models/: RnnMoore.py  VanillaRNN.py  gru_gpu_43125.pt  gru_gpu_45380.pt  gru_moore.pt  lstm_gpu_44121.pt  lstm_gpu_45379.pt  lstm_moore.pt  plots_model.py  rnn_moore.pt  run_vrnn_train.slurm  vanillarnn_gpu_45381.pt
outputs/k_four/: test_gru_result.pt  test_vrnn_result.pt
outputs/shuffle_True_ep100/: baselines.pt  test_gru_result.pt  test_lstm_result.pt  test_vrnn_result.pt
paper_visu/: new_map.py
src/data/: SlidingWindowDs.py  ca_data.py  prepare_cop.py  xarray_prep.py
src/fvg_adriatic_data/CA_RNN/data/: SlidingWindowDs.py  cop_data_stats.py  copernicus_download_temperature.py  prepare_cop.py  test_WDataset.ipynb  twoCA.h5  xarray_prep.py
src/models/: RnnMoore.py  VanillaRNN.py  gru.py  lstm-moore.py  lstm.py  plots_model.py
src/tests/: __init__.py  baseline_tests.py  cellular_automata.py  cellular_automaton_gru.py  eval_baseline.py  lstm_moore_test.py  test_RNN_CA.py  test_gru.py  test_lstm.py  test_vrnn.py  u_test.py  visualize_results.py
src/train/: RnnMoore.py  lstm-moore.py  train_gru.py  train_lstm.py  train_vrnn.py
src/utils/: checkpoint.py  data_check.py  evaluate.py  plots_model.py  show_errors.py  train_loop.py  train_model.py
tests/: test_LR_CA.py  test_RNN_CA.py  test_rnn.slurm  visualize_results.py
(+7 files in other folders)
